2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/i386/relocator16.S: Declare LOCAL(relocator16_end)
	for local arithmetics.
	Break %sp init into 2 instructions.
	Add 0 byte at the end.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (read_segment): Initialise err
	before loops.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/xzembed/xz_dec_stream.c (hash_validate): Use void *
	for context.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ldm.c (make_vg): Init part.name.
	(grub_ldm_detect): Silence spurious warning.
	(grub_util_is_ldm): Likewise.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/xnu.c (grub_xnu_boot): Init fsbfreq to
	sane value to avoid a spurious warning.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/dl.h: Switch from APPLE_CC to __APPLE__.
	(GRUB_MOD_LICENSE) [ASM_FILE]: Make into macro. All users updated.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/symbol.h (EXT_C) [!ASM_FILE]: Redefine with strings.
	* grub-core/lib/i386/backtrace.c (grub_backtrace): Use EXT_C.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gdb/i386/machdep.S: Use VARIABLE and EXT_C instead of
	hardcoding the relevant info.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gnulib/argp-fmtstream.c (__argp_get_display_len): Add
	missing const qualifiers.
	* grub-core/gnulib/argp-fmtstream.h (__argp_get_display_len): Likewise.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c [__APPLE__]: Add missing includes.
	(grub_util_biosdisk_is_floppy): Fix usage of undefined variable.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Silence spurious warning.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/ieee1275/ofpath.c: Rename devname to sys_devname everywhere to