@@ -1,5 +1,10 @@
 2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/commands/i386/pc/halt.c (grub_halt): Add noreturn attribute.
+	(grub_cmd_halt): Likewise.
+
+2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/lib/i386/relocator16.S: Declare LOCAL(relocator16_end)
 	for local arithmetics.
 	Break %sp init into 2 instructions.
